# bioforge

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.backend  HANDOFF.md  README.md  docker-compose.e2e.yml  docker-compose.yml  index.html  pyproject.toml  showcase.html
.github/workflows/: ci.yml  deploy-showcase.yml  nightly.yml
assets/: igv.esm-C4JO4L-5.js  index-Bp4sEBKB.css  index-CXEhq_RE.js  index-CqU4ZnI8.js  index-D7l27VFN.js  index-PBFDaFl6.css  index-yBL5nkmx.js  main-DjH5xFHm.js  main-GE0UZ8XL.js  react18-CvqTg3AI.js  react18-WkG1T5Wh.js  showcase-C6ale2Lo.js  showcase-DJGNsBxU.js  spec-CoovOd7K.js  spec-DfbPHV4t.js
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 69190266b045_baseline.py  a1c0ffee9b1d_durable_job_columns.py  acc01a7b0c2d_accounts.py  b1f09c3e8a21_pipeline_jobs.py  c2e1a7d4f8b3_predictions.py  facc01117a2b_uploaded_files.py
backend/src/bioforge/: config.py  constants.py  main.py
backend/src/bioforge/agent/: __init__.py  approval.py  context.py  critic.py  jobs.py  llm.py  local_critic.py  local_executor.py  local_planner.py  loop.py  memory.py  planner.py  roles.py
backend/src/bioforge/api/: agent.py  auth.py  benchmarks.py  files.py  gpu.py  pipelines.py  predictions.py  projects.py  sse.py  usage.py
backend/src/bioforge/auth/: __init__.py  passwords.py  tokens.py
backend/src/bioforge/benchmarks/: __init__.py  accuracy_report.py  calibration.py  clinvar_fidelity.py  deepvariant_runner.py  edit_outcome_agreement.py  edit_outcome_published_run.py  effdata.py  forecast_profiles.py  giab.py  off_target_recall.py  on_target_efficiency.py  published.py  reliability.py  variant_concordance.py
backend/src/bioforge/cli/: __init__.py  fetch_alphafold.py
backend/src/bioforge/db/: __init__.py  engine.py  models.py
backend/src/bioforge/gpu/: backend.py
backend/src/bioforge/observability/: __init__.py  tracing.py
backend/src/bioforge/pipelines/: jobs.py  runner.py
backend/src/bioforge/provenance/: __init__.py  methods_draft.py  methods_report.py  reproduce.py  research_object.py
backend/src/bioforge/storage/: __init__.py  adapter.py
backend/src/bioforge/tasks/: __init__.py  celery_app.py  queue.py
backend/src/bioforge/tools/: __init__.py  base.py  registry.py
backend/src/bioforge/workflows/: __init__.py  engine.py  nextflow_engine.py
backend/tests/: conftest.py  test_agent_memory_integration.py  test_agent_roles.py  test_agent_run.py  test_align_msa.py  test_alphafold_batch.py  test_amr_detection.py  test_annotate_variant.py  test_approval.py  test_auth.py  test_auth_isolation.py  test_azimuth.py  test_benchmarks.py  test_blast.py  test_build_phylogenetic_tree.py  test_cadd_score.py  test_calibration.py  test_call_variants.py  test_celery_e2e_docker.py  test_celery_jobs.py  test_cfd.py  test_cli_fetch_alphafold.py  test_clinvar_fidelity.py  test_clinvar_fidelity_online.py  test_codon_usage.py  test_compare_structures.py  test_cors_config.py  test_crispr_edit_report.py  test_critic.py  test_deepcrispr.py  test_design_guides.py  test_design_primers.py  test_digest_pinning.py  test_edit_outcome.py  test_edit_outcome_agreement.py  test_edit_outcome_published_run.py  test_fetch_alphafold.py  test_fetch_interpro.py  test_fetch_pdb.py  test_files.py  (+76 more)
backend/tests/fixtures/: clinvar_esummary_brca1_17661.json  clinvar_esummary_brca1_17661.meta.json  dbsnp_rs334.json  dbsnp_rs334.meta.json  ensembl_vep_brca1_c181tg.json  ensembl_vep_brca1_c181tg.meta.json  gnomad_brca1_5266dupc.json  gnomad_brca1_5266dupc.meta.json  regenerate.py  variant_recoder_brca1_5266dupc.json  variant_recoder_brca1_5266dupc.meta.json
docs/: DEMO.md  READINESS.md  deploy.md  grounding.md  handoff.md  handoff_platform_recommendations.md  handoff_session8_product.md  license_audit.md  phase5_architecture.md  plan_celery_durable_jobs.md
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  postcss.config.js  showcase.html  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: genome-browser.spec.ts
frontend/src/: App.tsx  index.css  main.tsx  showcase.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: agent.ts  auth.ts  benchmarks.ts  config.ts  files.ts  gpu.ts  pipelines.ts  predictions.ts  projects.ts  traces.ts  usage.ts
frontend/src/api/__tests__/: agent.test.ts
frontend/src/components/: AccuracyReport.tsx  ApprovalCard.tsx  AuthGate.tsx  CalibrationDiagram.tsx  ChatInput.tsx  CompareStructuresCard.tsx  CreateProjectDialog.tsx  CrisprReportCard.tsx  FeedbackPanel.tsx  FilesPanel.tsx  FinalCard.tsx  FindBestStructureCard.tsx  GpuChip.tsx  GroundedResponse.tsx  IgvGuideViewer.tsx  IgvOfftargetViewer.tsx  InterproCard.tsx  LoginScreen.tsx  MemoryInspector.tsx  MethodsModal.tsx  MolstarViewer.tsx  MsaCard.tsx  MsaViewer.tsx  OnTargetScoreCard.tsx  PdbStructureCard.tsx  PipelinesPanel.tsx  PrimerPairsCard.tsx  ProjectSwitcher.tsx  ReliabilityDiagram.tsx  RunDetail.tsx  RunHistory.tsx  StepCard.tsx  StructureCard.tsx  TraceView.tsx  UsageChip.tsx  igvGuideTrack.ts  igvOfftargetTrack.ts
frontend/src/components/__tests__/: AccuracyReport.test.tsx  (+24 more)
frontend/src/lib/: auth.ts  cn.ts  download.ts
frontend/src/test/: setup.ts
frontend/src/types/: agent.ts  benchmarks.ts  compare_structures.ts  crispr.ts  find_best_structure.ts  igv-shim.d.ts  interpro.ts  molstar-shim.d.ts  msa.ts  on_target.ts  pdb_structure.ts  primers.ts  projects.ts  structure.ts  traces.ts
scripts/: README.md  fetch_giab.sh  load_outcomes.py  models.env  regenerate_benchmarks.py  setup_nextflow.sh
scripts/gpu_server/: Dockerfile  README.md  server.py
(+125 files in other folders)
