[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioforge"
version = "0.0.1"
description = "Agentic AI bioinformatics platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.43",
    "biopython>=1.84",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/bioforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
markers = [
    "online: tests that hit live external APIs (NCBI, Ensembl). Deselected by default; run with -m online.",
]
addopts = "-m 'not online'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
