[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioforge"
version = "0.0.1"
description = "Agentic AI bioinformatics platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.43",
    "biopython>=1.84",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/bioforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
markers = [
    "online: tests that hit live external APIs (NCBI, Ensembl). Deselected by default; run with -m online.",
]
addopts = "-m 'not online'"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    # Pydantic uses `Field(...)` as a default value. This is the canonical pattern,
    # not a mistake — every BaseModel in the codebase trips this rule.
    "B008",
    # `class Foo(str, Enum)` is a working pattern that some downstream code (older
    # Pydantic v1 patterns, Anthropic SDK) handles more cleanly than `StrEnum`.
    # Allow both styles.
    "UP042",
    # Line-too-long. Citation strings in tool registrations are intentionally on one
    # line for grep / copy-paste; long docstrings explain biological context. The
    # actual code stays short. Wrapping these mid-sentence loses more than it gains.
    "E501",
]
