[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioforge"
version = "0.0.1"
description = "Agentic AI bioinformatics platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.43",
    "biopython>=1.84",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "alembic>=1.13",
    "primer3-py>=2.0",
    "httpx>=0.27",
    "celery>=5.4",
    "redis>=5.0",
    "minio>=7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]
# inDelphi (Shen 2018) — predict per-guide indel distributions for Cas9 edits.
# OPT-IN because the upstream model is licensed for non-commercial research use
# only; see backend/src/bioforge/tools/sequence/models/indelphi/LICENSE_NOTICE.md.
# Install with `pip install -e .[indelphi]` after reading the notice.
indelphi = [
    "scikit-learn>=1.5",
    "pandas>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/bioforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
markers = [
    "online: tests that hit live external APIs (NCBI, Ensembl). Deselected by default; run with -m online.",
    "nextflow: tests that require a real `nextflow` binary on PATH (BIOFORGE_NEXTFLOW_ENABLED=true). Deselected by default; run with -m nextflow inside WSL2 or Linux.",
]
addopts = "-m 'not online and not nextflow'"

[tool.ruff]
line-length = 120
target-version = "py311"
# The DeepCRISPR legacy inference script targets Python 3.6 / TensorFlow 1.x and runs
# only inside the pinned legacy environment (never imported by the package). Exclude it
# so ruff doesn't lint/format it into 3.11-only syntax.
extend-exclude = ["backend/src/bioforge/tools/sequence/models/deepcrispr/legacy"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    # Pydantic uses `Field(...)` as a default value. This is the canonical pattern,
    # not a mistake — every BaseModel in the codebase trips this rule.
    "B008",
    # `class Foo(str, Enum)` is a working pattern that some downstream code (older
    # Pydantic v1 patterns, Anthropic SDK) handles more cleanly than `StrEnum`.
    # Allow both styles.
    "UP042",
    # Line-too-long. Citation strings in tool registrations are intentionally on one
    # line for grep / copy-paste; long docstrings explain biological context. The
    # actual code stays short. Wrapping these mid-sentence loses more than it gains.
    "E501",
]
